--- a/app/globals.css
+++ b/app/globals.css
@@ -42,3 +42,10 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+
+
+.text-content {
+  text-align: justify;
+  word-spacing: -1px; /* Adjust this value as needed */
+}
